<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:background="@color/fondop"
        android:contentDescription="@string/logo"
        android:src="@drawable/logotipo"
        android:text="ABRAPALABRA" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/jugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@color/fondop"
            android:onClick="onClickJugar"
            android:text="@string/menu_item_jugar"
            android:textColor="@color/white"
            android:textSize="@dimen/title" />

        <Button
            android:id="@+id/informacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClickInformación"
            android:text="@string/menu_item_informacion"
            android:textColor="?android:attr/colorForeground"
            android:textSize="@dimen/subtitle" />
    </RelativeLayout>
</LinearLayout>