<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pictionary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="Pictionary">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tiempo"
        android:textColor="@color/black"
        android:textSize="@dimen/textApp" />

    <TextView
        android:id="@+id/txtClicks"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/timer"
        android:text="@string/timer"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textApp" />

    <TextView
        android:id="@+id/aciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rso"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/aciertos"
        android:textColor="@color/black"
        android:textSize="@dimen/textApp" />

    <RelativeLayout
        android:id="@+id/rso"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:onClick="sound">

        <ImageView
            android:id="@+id/so"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/sound"
            android:src="@drawable/soundon" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8428748101355923/9376885436" />

    <RelativeLayout
        android:id="@+id/palabras"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_above="@+id/buttons"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@color/fondo"
        android:gravity="center"
        android:onClick="random">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/click_para_empezar"
            android:textColor="@android:color/black"
            android:textSize="@dimen/otitle" />
    </RelativeLayout>

    <TextView
        android:id="@+id/naciertos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtClicks"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/aciertos"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="@dimen/textApp" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/adView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:gravity="bottom">

        <Button
            android:id="@+id/correcto"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="45dp"
            android:background="@drawable/good"
            android:onClick="onClickSi" />

        <Button
            android:id="@+id/fallo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="45dp"
            android:background="@drawable/bad"
            android:onClick="onClickNo" />
    </RelativeLayout>
</RelativeLayout>

